# rocket-blog-demo

./: Cargo.toml  Rocket.toml  notes.txt
src/: hash.rs  main.rs  setup.rs
templates/: about.html.hbs  contact.html.hbs  hello.html.hbs  index.html.hbs  url-shortner.html.hbs
templates/layouts/: main.html.hbs  nav.html.hbs
