[package]
name = "blog-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_dyn_templates = {features = ["handlebars"], version = "0.1.0"}
sea-orm = { version = "1.0.0-rc.1", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

serde = { version = "1.0.196", features = ["derive"] }
chrono = "0.4.33"
md5 = "0.7.0"



